# sidereon-c

./: .git-blame-ignore-revs  .gitignore  CHANGELOG.md  Cargo.toml  README.md  REPORT.md
.github/workflows/: ci.yml
bindings/c/: Cargo.toml  README.md  cbindgen.toml
bindings/c/include/: sidereon.h
bindings/c/src/: almanac.rs  antenna.rs  antex.rs  araim.rs  atmosphere.rs  bias.rs  broadcast.rs  cdm.rs  clock.rs  combination.rs  constellation.rs  covariance.rs  coverage.rs  data_distribution.rs  decay.rs  dgnss.rs  dop.rs  doppler.rs  drag.rs  dted.rs  ephemeris.rs  error_metrics.rs  estimation.rs  fde.rs  force.rs  frame.rs  frame_catalog.rs  fusion.rs  geodesic.rs  geodetic_time_series.rs  geofence.rs  geoid.rs  geometry.rs  glonass.rs  ils.rs  iod.rs  ionex.rs  lib.rs  mmap.rs  moving.rs  (+45 more)
bindings/c/tests/: antex_fixture.h  broadcast_fixture.h  cap013_smoke.c  cap015_smoke.c  capround_smoke.c  caps_extra_smoke.c  ccsds_serialize.c  constellation_fixture.h  constellation_smoke.c  core012_smoke.c  core_caps_smoke.c  data_distribution_smoke.c  domain018_smoke.c  dop_fixture.h  extras_smoke.c  full_coverage_smoke.c  gen_antex_fixture_header.py  gen_constellation_fixture_header.py  gen_dop_fixture_header.py  gen_fixture_header.py  gen_iono_fixture_header.py  gen_ppp_fixture_header.py  gen_prop_fixture_header.py  gen_sp3_terminal_record_fixture.py  iono_fixture.h  merged_smoke.c  newgaps.c  parity_gaps_smoke.c  parity_smoke.c  phaseb_smoke.c  ppp_fixture.h  precise_samples_smoke.c  prop_fixture.h  rinex_fixture.h  robustness_smoke.c  round2_parity_smoke.c  round2_smoke.c  rtk_fixture.h  rtk_rinex_smoke.c  run_ci_smoke.sh  (+8 more)
bindings/c/tests/fbgen/: Cargo.toml
bindings/c/tests/fbgen/src/: main.rs
bindings/c/tests/fixtures/: ppp_esbc.json
bindings/c/tests/fixtures/sp3/: GAP_G01_20201760000_15M.sp3
bindings/c/tests/fixtures/tdm/: annex_e_18.kvn
bindings/c/tests/rinexgen/: Cargo.toml
bindings/c/tests/rinexgen/src/: main.rs
bindings/c/tests/velgen/: Cargo.toml
bindings/c/tests/velgen/src/: main.rs
