# Manual fixture generator for the C broadcast/fallback smoke test. Not part of
# the binding workspace (own empty [workspace] table), so a plain `cargo build` /
# `cargo test` of the binding never pulls it in. Run it by hand to regenerate
# bindings/c/tests/broadcast_fixture.h after a core staleness/fallback change:
#
#     cargo run --release --manifest-path bindings/c/tests/fbgen/Cargo.toml \
#         > bindings/c/tests/broadcast_fixture.h
#
# It reproduces the inputs of sidereon-core's own broadcast_spp_fallback_arc
# integration test (ESBC00DNK DOY177 GPS C1C first epoch) against the same
# published core the binding consumes and emits the engine-extracted
# observations plus the solve inputs as a C header, so the C smoke test feeds
# the binding the same inputs.
[package]
name = "fbgen"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
# Same published core the binding consumes, so regenerated fixtures match the
# engine the binding builds against and regeneration is reproducible from this
# repo alone.
sidereon-core = "0.14.0"
